   0.2.20 appears to be OK. For 0.3.x x>6 make USE_THREAD=0 USE_LOCKING=1
   to make openblas ensures thread safety.

* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

* bam(...,discrete=TRUE) has no option to use the identical
	discretizaton to that used in fitting when predicting

* efsud Vb every time? log.detS setting matrix diagonals
better done with .Call. Fix bam NCV variance comp, to be as gam.

1.9-2

** 'NCV' added as a method option for bam(...,discrete=TRUE). More efficient 
  than gam(...,method='NCV'), but much less efficient than default REML.

* 'clog' censored logistic family added for AFT models. Written by Chris Shen.

* names in NCV 'nei' structure modified to better match paper and documentation 
  notation.

* fix bam to always return a square QR R factor of the model matrix 
  (previously it was possible for it not to be square for a rank deficient 
  model matrix, which could cause a failure in summary). Thanks to Amy Hughes

* Fixed bam/bam.update to pick up weights correctly, rather than failing. 
  Thanks to Max Moldovan.

* Added sparse matrix Cholesky routine, mchol, a wrapper for 
  Matrix::Cholesky, giving the same functionality as Matrix::chol prior 
  to the decision for this not to return the pivot sequence. 

* 'mroot' modified so that svd option uses an efficient symmetric eigen routine 
  to compute SVD (argument is positive semi-definite after all).

* fixed gam.vcomp to avoid failure with extended families and bam. Thanks to
  Nathan LaSpina for reporting.

* modification of discrete bam prediction method function to better deal with
  extra factor levels in prediction. Slightly differs from predict.gam, in 
  setting effect to zero, rather than NA.

* fix to NCV handling of dropped NA points - previously could end up with
  different numbers of predict and drop neighbourhoods. Thanks to Nicole
  Augustin.	
